// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Modal component renders component renders SERVER_ERROR 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal
    modal={
      Object {
        "actionLabel": "OK",
        "cancelLabel": null,
        "content": "SERVER_ERROR",
        "onProceed": Any {
          "$$typeof": Symbol(jest.asymmetricMatcher),
          "sample": [Function],
        },
        "open": true,
      }
    }
    open={false}
    setModal={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ModalHeader>
          Er ging iets mis
        </ModalHeader>,
        <ModalContent>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
              }
            }
          />
        </ModalContent>,
        <ModalActions>
          <button
            className="dcatd-form-button dcatd-form-button-submit"
            onClick={[Function]}
          >
            OK
          </button>
          
        </ModalActions>,
      ],
      "closeOnDimmerClick": true,
      "closeOnDocumentClick": false,
      "dimmer": true,
      "eventPool": "Modal",
      "open": true,
      "size": "tiny",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Er ging iets mis",
        },
        "ref": null,
        "rendered": "Er ging iets mis",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <button
              className="dcatd-form-button dcatd-form-button-submit"
              onClick={[Function]}
            >
              OK
            </button>,
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OK",
              "className": "dcatd-form-button dcatd-form-button-submit",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "OK",
            "type": "button",
          },
          "",
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ModalHeader>
            Er ging iets mis
          </ModalHeader>,
          <ModalContent>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
                }
              }
            />
          </ModalContent>,
          <ModalActions>
            <button
              className="dcatd-form-button dcatd-form-button-submit"
              onClick={[Function]}
            >
              OK
            </button>
            
          </ModalActions>,
        ],
        "closeOnDimmerClick": true,
        "closeOnDocumentClick": false,
        "dimmer": true,
        "eventPool": "Modal",
        "open": true,
        "size": "tiny",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Er ging iets mis",
          },
          "ref": null,
          "rendered": "Er ging iets mis",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "
    <span>
      <p>U bent niet (meer) bevoegd tot het uitvoeren van deze actie.</p>
      <p>Wellicht komt dit doordat:
      <ol>
        <li>Uw sessie is verlopen. Deze duurt maximaal 10 uur.</li>
        <li>U niet bevoegd bent om datasets te beheren.</li>
      </ol>
      </p>
    </span>
  ",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <button
                className="dcatd-form-button dcatd-form-button-submit"
                onClick={[Function]}
              >
                OK
              </button>,
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "OK",
                "className": "dcatd-form-button dcatd-form-button-submit",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "OK",
              "type": "button",
            },
            "",
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`The Modal component renders component renders default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal
    modal={
      Object {
        "actionLabel": "OK",
        "cancelLabel": "Annuleren",
        "content": "Weet u het zeker?",
        "onProceed": [Function],
        "open": false,
      }
    }
    open={false}
    setModal={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ModalHeader />,
        <ModalContent>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Weet u het zeker?",
              }
            }
          />
        </ModalContent>,
        <ModalActions>
          <button
            className="dcatd-form-button dcatd-form-button-submit"
            onClick={[Function]}
          >
            OK
          </button>
          <button
            className="dcatd-form-button dcatd-form-button-cancel"
            onClick={[Function]}
          >
            Annuleren
          </button>
        </ModalActions>,
      ],
      "closeOnDimmerClick": true,
      "closeOnDocumentClick": false,
      "dimmer": true,
      "eventPool": "Modal",
      "open": false,
      "size": "tiny",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Weet u het zeker?",
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "Weet u het zeker?",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <button
              className="dcatd-form-button dcatd-form-button-submit"
              onClick={[Function]}
            >
              OK
            </button>,
            <button
              className="dcatd-form-button dcatd-form-button-cancel"
              onClick={[Function]}
            >
              Annuleren
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OK",
              "className": "dcatd-form-button dcatd-form-button-submit",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "OK",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Annuleren",
              "className": "dcatd-form-button dcatd-form-button-cancel",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Annuleren",
            "type": "button",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ModalHeader />,
          <ModalContent>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Weet u het zeker?",
                }
              }
            />
          </ModalContent>,
          <ModalActions>
            <button
              className="dcatd-form-button dcatd-form-button-submit"
              onClick={[Function]}
            >
              OK
            </button>
            <button
              className="dcatd-form-button dcatd-form-button-cancel"
              onClick={[Function]}
            >
              Annuleren
            </button>
          </ModalActions>,
        ],
        "closeOnDimmerClick": true,
        "closeOnDocumentClick": false,
        "dimmer": true,
        "eventPool": "Modal",
        "open": false,
        "size": "tiny",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Weet u het zeker?",
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "Weet u het zeker?",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <button
                className="dcatd-form-button dcatd-form-button-submit"
                onClick={[Function]}
              >
                OK
              </button>,
              <button
                className="dcatd-form-button dcatd-form-button-cancel"
                onClick={[Function]}
              >
                Annuleren
              </button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "OK",
                "className": "dcatd-form-button dcatd-form-button-submit",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "OK",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Annuleren",
                "className": "dcatd-form-button dcatd-form-button-cancel",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Annuleren",
              "type": "button",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
